k8s/applications/automation/mqtt/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      containers:
        - name: mosquitto
          image: eclipse-mosquitto:2.0
          volumeMounts:
            - name: config
              mountPath: /mosquitto/config
          ports:
            - containerPort: 1883
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
      volumes:
        - name: config
          projected:
            sources:
              - configMap:
                  name: mosquitto-config
              - secret:
                  name: mosquitto-password
