k8s/applications/automation/mqtt/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: TCPRoute
metadata:
  name: mqtt
  namespace: mqtt
spec:
  parentRefs:
    - name: internal
      namespace: gateway
      port: 1883
  rules:
    - backendRefs:
        - name: mosquitto
          port: 1883
